# novelworld

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  IMPLEMENTATION.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  docker-compose.test.yml  docker-compose.yml  start.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker.yml
crates/llm-client/: Cargo.toml  README.md
crates/llm-client/src/: client.rs  lib.rs  retry.rs  tests.rs  types.rs
crates/llm-client/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
docs/: ARCHITECTURE.md
frontend/: Dockerfile  index.html  nginx-spa.conf  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/styles/: globals.css
frontend/src/entities/novel/: api.ts
frontend/src/features/auth/model/: useAuthStore.test.ts  useAuthStore.ts
frontend/src/features/character-chat/model/: useChatStore.ts
frontend/src/pages/characters/ui/: CharactersPage.tsx
frontend/src/pages/home/ui/: HomePage.tsx
frontend/src/pages/login/ui/: LoginPage.tsx
frontend/src/pages/reader/ui/: ReaderPage.tsx
frontend/src/pages/setup/ui/: SetupPage.tsx
frontend/src/pages/shelf/ui/: ShelfPage.tsx
frontend/src/shared/api/: client.ts
frontend/src/shared/types/: index.test.ts  index.ts
frontend/src/widgets/branch-choice/ui/: BranchChoice.tsx
frontend/src/widgets/character-card/ui/: CharacterCard.tsx
frontend/src/widgets/chat-panel/ui/: ChatPanel.tsx
gateway/: Cargo.toml  Dockerfile
gateway/src/: auth.rs  main.rs  metrics.rs  proxy.rs  setup.rs
infra/nginx/: nginx.conf
infra/postgres/: init.sql  seed.sql
services/agent-service/: Cargo.toml  Dockerfile
services/agent-service/src/: main.rs  tests.rs
services/agent-service/src/application/handlers/: mod.rs
services/agent-service/src/domain/: mod.rs  ports.rs
services/agent-service/src/domain/entities/: memory.rs
services/agent-service/src/domain/repositories/: mod.rs
services/agent-service/src/domain/services/: memory_manager.rs
services/agent-service/src/infrastructure/: mod.rs
services/agent-service/src/infrastructure/cache/: mod.rs  redis_cache.rs
services/agent-service/src/infrastructure/embedding/: mod.rs
services/agent-service/src/infrastructure/http/: mod.rs  novel_client.rs
services/agent-service/src/infrastructure/llm/: mod.rs
services/agent-service/src/infrastructure/persistence/: mod.rs  pg_character_info_repo.rs  pg_chat_repo.rs  pg_memory_repo.rs
services/agent-service/src/interface/http/: mod.rs
services/narrative-service/: Cargo.toml  Dockerfile
services/narrative-service/src/: main.rs  tests.rs
services/narrative-service/src/application/handlers/: mod.rs
services/narrative-service/src/domain/: mod.rs  ports.rs
services/narrative-service/src/domain/entities/: mod.rs  narrative_node.rs
services/narrative-service/src/domain/repositories/: mod.rs
services/narrative-service/src/domain/services/: mod.rs  narrative_engine.rs
services/narrative-service/src/infrastructure/: mod.rs
services/narrative-service/src/infrastructure/http/: novel_client.rs
services/narrative-service/src/infrastructure/llm/: mod.rs
services/narrative-service/src/infrastructure/persistence/: mod.rs  pg_chapter_read_repo.rs  pg_narrative_repo.rs  pg_world_state_repo.rs
services/narrative-service/src/interface/http/: mod.rs
services/novel-service/: Cargo.toml  Dockerfile
services/novel-service/src/: main.rs  tests.rs
services/novel-service/src/application/commands/: mod.rs
services/novel-service/src/application/handlers/: mod.rs
services/novel-service/src/domain/: mod.rs  ports.rs
services/novel-service/src/domain/entities/: chapter.rs  character.rs  mod.rs  novel.rs
services/novel-service/src/domain/events/: mod.rs
services/novel-service/src/domain/repositories/: mod.rs
services/novel-service/src/domain/services/: character_extractor.rs  mod.rs  node_detector.rs  novel_parser.rs
services/novel-service/src/domain/value_objects/: mod.rs
services/novel-service/src/infrastructure/: mod.rs
services/novel-service/src/infrastructure/llm/: image.rs  mod.rs
services/novel-service/src/infrastructure/persistence/: chapter_pg_repo.rs  character_pg_repo.rs  mod.rs  novel_pg_repo.rs  pg_progress_repo.rs
services/novel-service/src/interface/http/: mod.rs
services/user-service/: Cargo.toml  Dockerfile
services/user-service/src/: main.rs  tests.rs
services/user-service/src/application/handlers/: mod.rs
services/user-service/src/domain/entities/: user.rs
services/user-service/src/domain/repositories/: mod.rs
services/user-service/src/infrastructure/auth/: jwt.rs
services/user-service/src/infrastructure/persistence/: mod.rs  pg_user_repo.rs
services/user-service/src/interface/http/: mod.rs
tests/integration/: Cargo.toml
tests/integration/tests/: auth_flow.rs  database.rs  mod.rs  redis_cache.rs
