[workspace]
resolver = "2"

members = [
    "gateway",
    "services/novel-service",
    "services/agent-service",
    "services/narrative-service",
    "services/user-service",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["multipart", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# gRPC
tonic = "0.14"
prost = "0.13"

# Database
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "10"
bcrypt = "0.19"
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (for LLM API)
reqwest = { version = "0.13", features = ["json", "stream"] }

# Redis
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = "0.23"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.15"
dotenvy = "0.15"
futures = "0.3"
async-trait = "0.1"
bytes = "1"
