[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true

# Observability
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Rate limiting
governor = "0.8"
