[package]
name = "agent-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
async-trait.workspace = true
futures.workspace = true
redis.workspace = true
deadpool-redis.workspace = true
bytes.workspace = true
llm-client.workspace = true
async-stream = "0.3"
tokio-stream = "0.1"
